<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/unit_2x"
    android:paddingEnd="@dimen/unit_2x"
    android:paddingBottom="@dimen/unit_2x"
    android:background="@drawable/widget_card_background"
    android:clickable="true">



    <TextView
        style="@style/Title"
        android:id="@+id/android_version_title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/unit_1.5x"
        android:text="@string/android_version_title"/>


    <TextView
        style="@style/Label"
        android:id="@+id/android_version_release_label"
        android:layout_below="@id/android_version_title"
        android:text="@string/android_version_release_label"/>
    <TextView
        style="@style/Value"
        android:id="@+id/android_version_release_value"
        android:layout_alignBaseline="@id/android_version_release_label"
        android:layout_toEndOf="@id/android_version_release_label"
        android:text="@string/android_version_release_value_default"/>

    <TextView
        style="@style/Label"
        android:id="@+id/android_version_sdk_label"
        android:layout_below="@id/android_version_release_label"
        android:text="@string/android_version_sdk_label"/>
    <TextView
        style="@style/Value"
        android:id="@+id/android_version_sdk_value"
        android:layout_alignBaseline="@id/android_version_sdk_label"
        android:layout_toEndOf="@id/android_version_sdk_label"
        android:text="@string/android_version_sdk_value_default"/>



    <TextView
        style="@style/Title"
        android:id="@+id/device_info_title"
        android:layout_below="@id/android_version_sdk_label"
        android:layout_marginTop="@dimen/unit_1.5x"
        android:text="@string/device_info_title"/>


    <TextView
        style="@style/Label"
        android:id="@+id/device_info_brand_label"
        android:layout_below="@id/device_info_title"
        android:text="@string/device_info_brand_label"/>
    <TextView
        style="@style/Value"
        android:id="@+id/device_info_brand_value"
        android:layout_alignBaseline="@id/device_info_brand_label"
        android:layout_toEndOf="@id/device_info_brand_label"
        android:text="@string/device_info_brand_value_default"/>

    <TextView
        style="@style/Label"
        android:id="@+id/device_info_manufacturer_label"
        android:layout_below="@id/device_info_brand_label"
        android:text="@string/device_info_manufacturer_label"/>
    <TextView
        style="@style/Value"
        android:id="@+id/device_info_manufacturer_value"
        android:layout_alignBaseline="@id/device_info_manufacturer_label"
        android:layout_toEndOf="@id/device_info_manufacturer_label"
        android:text="@string/device_info_manufacturer_value_default"/>

    <TextView
        style="@style/Label"
        android:id="@+id/device_info_marketname_label"
        android:layout_below="@id/device_info_manufacturer_label"
        android:text="@string/device_info_marketname_label"/>
    <TextView
        style="@style/Value"
        android:id="@+id/device_info_marketname_value"
        android:layout_alignBaseline="@id/device_info_marketname_label"
        android:layout_toEndOf="@id/device_info_marketname_label"
        android:text="@string/device_info_marketname_value_default"/>

    <TextView
        style="@style/Label"
        android:id="@+id/device_info_model_label"
        android:layout_below="@id/device_info_marketname_label"
        android:text="@string/device_info_model_label"/>
    <TextView
        style="@style/Value"
        android:id="@+id/device_info_model_value"
        android:layout_alignBaseline="@id/device_info_model_label"
        android:layout_toEndOf="@id/device_info_model_label"
        android:text="@string/device_info_model_value_default"/>

    <TextView
        style="@style/Label"
        android:id="@+id/device_info_codename_label"
        android:layout_below="@id/device_info_model_label"
        android:text="@string/device_info_codename_label"/>
    <TextView
        style="@style/Value"
        android:id="@+id/device_info_codename_value"
        android:layout_alignBaseline="@id/device_info_codename_label"
        android:layout_toEndOf="@id/device_info_codename_label"
        android:text="@string/device_info_codename_value_default"/>

</RelativeLayout>
